--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^10.13.1",
     "next": "14.2.8",
     "nodemailer": "^6.9.15",
+    "proxy": "https://erp.uniquepipedgas.com",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
